feat(security): enable security tests in CI/CD with bytecode enforcement (P0)
Addresses Security Expert P0: Security tests not running in CI/CD.

**Problem:**
- Critical security test was @Disabled in CI/CD
- No validation of bytecode-level reflection blocking
- Regression risk: sandbox bypass could go undetected

**Solution:**

1. **Maven Surefire Configuration** (pom.xml)
   - Added -javaagent flag to argLine for agent loading
   - Added security.tests.enabled=true system property
   - Agent loaded from target/${project.build.finalName}.jar

2. **Security Test Update** (CapabilitySecurityTest.java)
   - Replaced @Disabled with @EnabledIfSystemProperty
   - Updated test to use SandboxContext (bytecode-level)
   - Validates bytecode transformation blocks reflection

**Maven Configuration:**

```xml
<plugin>
  <artifactId>maven-surefire-plugin</artifactId>
  <configuration>
    <systemPropertyVariables>
      <security.tests.enabled>true</security.tests.enabled>
    </systemPropertyVariables>
    <argLine>-javaagent:${project.build.directory}/${project.build.finalName}.jar</argLine>
  </configuration>
</plugin>
```

**Test Update:**

Before:
```java
@Disabled("Requires -Djava.security.manager=allow JVM flag (Java 21+)")
void testSecurityManager_BlocksReflection_ManualTest() {
    System.setSecurityManager(new SandboxSecurityManager());  // ❌ Deprecated
}
```

After:
```java
@EnabledIfSystemProperty(named = "security.tests.enabled", matches = "true")
void testBytecodeEnforcement_BlocksReflection() {
    SandboxContext.enterRuleExecution();  // ✅ Bytecode-level
    // Attempt setAccessible() → SecurityException
}
```

**Security Properties:**

✅ **CI/CD Enforcement:** Tests run automatically in Maven builds
✅ **Regression Prevention:** Sandbox bypass detected immediately
✅ **Bytecode Validation:** Verifies transformation works correctly
✅ **No Manual Testing:** Fully automated validation

**Test Execution:**

```bash
# Security test runs automatically
mvn test

# Test 